@@ -1,3 +1,4 @@
+	* fixed SOCKS5 bug for routing UDP packets
 	* fixed bug on windows when verifying resume data for a torrent where
 	  one of its directories had been removed
 	* fixed race condition in peer-list with DHT
